--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<script>
-  window.onload = function() {
-    window.location.replace("https://github.com/Ispir-Mihai");
-}
-</script>
+
+<a href="mispir.ro">MISPIR</a>
+<a href="https://github.com/Ispir-Mihai">GITHUB PAGE</a>
